--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,6 @@ body{
     #HEADER
 \*-----------------------------------*/
 
-.navbar,
 .login-btn .span { display: none; }
 
 .header { 
@@ -170,9 +169,8 @@ body{
     z-index: 4;
 }
 
-.header .active{
+.header.active{
     background-color: var(--white);
-    padding-block: 15px;
     box-shadow: var(--shadow-2);
 }
 
@@ -202,14 +200,133 @@ body{
     box-shadow: var(--shadow-1);
 }
 
+.header-action-btn ion-icon { --ionicon-stroke-width: 40px; }
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: -300px;
+    background-color: var(--white);
+    max-width: 300px;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    visibility: hidden;
+    transition: 0.25s var(--cubic-in);
+}
+
+.navbar.active {
+    visibility: visible;
+    transform: translateX(300px);
+    transition: 0.5s var(--cubic-out);
+}
+
+.navbar-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    border-block-end: 1px solid var(--cultured-2);
+}
+
+.navbar .logo { font-size: 2.8rem; }
+
+.nav-close-btn {
+    background-color: var(--white);
+    color: var(--space-cadet-2);
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: var(--shadow-1);
+}
+
+.navbar-list { padding: 15px 20px; }
+
+.navbar-item:not(:last-child) { border-block-end: 1px solid var(--cultured-2); }
+
+.navbar-link {
+    font-weight: var(--fw-500);
+    padding-block: 8px;
+    transition: var(--transition-1);
+}
+
+.navbar-link:is(:hover, :focus) { color: var(--ultramarine-blue); }
+
+.overlay {
+    position: fixed;
+    inset: 0;
+    background-color: var(--black_80);
+    z-index: 1;
+    opacity: 0;
+    pointer-events: none;
+    transition: var(--transition-1);
+}
+  
+.overlay.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
 /*-----------------------------------*\
     #SEARCH BOX
 \*-----------------------------------*/
+.search-container {
+    position: fixed;
+    inset: 0;
+    background-color: var(--space-cadet_80);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+    opacity: 0;
+    visibility: hidden;
+    transition: var(--transition-1);
+}
+  
+.search-container.active {
+    opacity: 1;
+    visibility: visible;
+}
+  
+.search-container .container {
+    max-width: 500px;
+    width: 100%;
+}
+
+.search-close-btn {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    background-color: var(--white);
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 50%;
+}
+  
+.search-wrapper { position: relative; }
+  
+.search-field {
+    background-color: var(--white);
+    padding: 20px 40px;
+    border-radius: var(--radius-6);
+    color: var(--old-lavender);
+    font-weight: var(--fw-500);
+}
+  
+.search-field::-webkit-search-cancel-button { display: none; }
+
+.search-submit {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
   
 /*-----------------------------------*\
     #HERO
 \*-----------------------------------*/
   
+
 /*-----------------------------------*\
     #CATEGORY
 \*-----------------------------------*/
