--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,72 @@ body{
   
 .container { padding-inline: 15px; }
 
+.abs-img { display: none;}
+
+.section-subtitle {
+    color: var(--ultramarine-blue);
+    text-transform: uppercase;
+    font-weight: var(--fw-800);
+    letter-spacing: 2px;
+    margin-block-end: 5px;
+}
+
+.h1,
+.h2,
+.h3 {
+    color: var(--space-cadet-2);
+    line-height: 1.3;
+    font-weight: var(--fw-800);
+}
+
+.h1 { font-size: var(--fs-1); }
+
+.h2 { font-size: var(--fs-2); }
+
+.h3 {
+    font-size: var(--fs-4);
+    font-weight: var(--fw-700);
+}
+
+.btn {
+    min-height: 60px;
+    max-width: max-content;
+    font-size: var(--fs-5);
+    font-weight: var(--fw-700);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 30px;
+    border-radius: var(--radius-6);
+    transition: var(--transition-1);
+}
+
+.btn-primary {
+    background-color: var(--ultramarine-blue);
+    color: var(--white);
+}
+
+.btn-primary:is{ background-color: var(--space-cadet-2); }
+
+.btn-secondary {
+    background-color: var(--white);
+    color: var(--ultramarine-blue);
+}
+
+.btn-secondary:is(:hover, :focus) {
+    background-color: var(--pumpkin);
+    color: var(--white);
+}
+
+.w-100 { width: 100%;}
+
+.section { padding-block: var(--section-padding);}
+
+.grid-list {
+    display: grid;
+    gap: 30px;
+}
+
 /*-----------------------------------*\
     #HEADER
 \*-----------------------------------*/
@@ -325,11 +391,85 @@ body{
 /*-----------------------------------*\
     #HERO
 \*-----------------------------------*/
+
+.hero {
+    padding-block-start: calc(60px + var(--section-padding));
+    padding-block-end: var(--section-padding);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.hero .container {
+    display: grid;
+    gap: 30px;
+}
+
+.hero-title { margin-block-end: 25px; }
+
+.hero-text {
+    font-size: var(--fs-5);
+    font-weight: var(--fw-500);
+    margin-block-end: 30px;
+}
+
+.hero-banner {
+    max-width: max-content;
+    margin-inline: auto;
+}
   
 
 /*-----------------------------------*\
     #CATEGORY
 \*-----------------------------------*/
+
+.category :is(.section-subtitle, .section-title) {text-align: center;}
+
+.category .section-title { margin-block-end: 60px;}
+
+.category-card {
+    --title-color: var(--space-cadet-2);
+    --meta-color: var(--old-lavender);
+    --icon-color: var(--ultramarine-blue);
+    --icon-bg: var(--white);
+
+    background-color: var(--cultured-1);
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    border-radius: var(--radius-6);
+    transition: var(--transition-1);
+}
+
+.category-card .card-icon {
+    background-color: var(--icon-bg);
+    color: var(--icon-color);
+    font-size: 30px;
+    height: 60px;
+    min-width: 60px;
+    display: grid;
+    place-items: center;
+    border-radius: var(--radius-4);
+    transition: var(--transition-1);
+}
+
+.category-card .card-title { color: var(--title-color);}
+
+.category-card .card-meta {
+    color: var(--meta-color);
+    font-weight: var(--fw-600);
+    margin-block-start: 5px;
+}
+
+.category-card:is(:hover, :focus-within) {
+    --title-color: var(--white);
+    --meta-color: var(--white);
+    --icon-color: var(--white);
+    --icon-bg: var(--white_10);
+
+    background-color: var(--ultramarine-blue);
+}
   
 /*-----------------------------------*\
     #ABOUT
