--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,6 +258,12 @@ body {
     gap: 30px;
 }
 
+.img-cover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
 /*-----------------------------------*\
     #HEADER
 \*-----------------------------------*/
@@ -558,11 +564,13 @@ body {
 .about-item {
     display: flex;
     align-items: flex-start;
-    gap: 250px;
+    gap: 25px;
 }
 
+.about-item:not(:last-child) { margin-block-end: 30px; }
+
 .about-item .item-icon {
-    padding: 150px;
+    padding: 15px;
     border-radius: 50%;
 }
 
@@ -1119,7 +1127,7 @@ body {
      * HERO
      */
 
-     .hero-text {--fs: 2rem;}
+     .hero-text {--fs-5: 2rem;}
 
     /**
      * ABOUT
